# bicon

./: .cvsignore  .indent.pro  AUTHORS  COPYING  ChangeLog  HISTORY  HISTORY.farsi  Makefile.am  Makefile.cvs  NEWS  README  THANKS  TODO  bicon.pc.in  bootstrap  configure.ac  git.mk
bconsole/: .cvsignore  Makefile.am  bconsole-config.in  bconsole.h  bconsole_lig.i  bconsole_ligature.c  bconsole_ligature.h  bconsole_log2con.c  bconsole_log2con.h  bconsole_nsm_shape.i  bconsole_vu.c  edconsole  vuconsole
bicon/: .cvsignore  Makefile.am  bconso.c  bicon.c  bicon_read.c  bicon_read.h  bicon_so.c  pty_spawn.c  pty_spawn.h
bjoining/: .cvsignore  Makefile.am  arablig.i  arabname.i  bjoining-config.in  bjoining.h  bjoining_charprop.c  bjoining_charprop.h  bjoining_compose.c  bjoining_compose.h  bjoining_log2cuni.c  bjoining_log2cuni.h  bjoining_vis2cuni.c  bjoining_vis2cuni.h  bjoining_vu.c  bjoining_ye.c  bjoining_ye.h  compose.i  fixfarsiye.c  fixpersianye.c  msye.c  nonspace.i  shape.i
doc/: Makefile.am
doc/man/: Makefile.am  abicon.1  bicon.1  bicon.bin.1  bicon_console.1
font/: .cvsignore  Makefile  Makefile.am  bdf_set_names  bicon-8x16.bdf  bicon-arabic.sub-sfm  bicon-ascii.sfm  bicon-bdf2psf.pl  bicon-marks.sub-sfm  bicon-nomarks.sub-sfm  create_psf  farsi_bdf2psf.pl  farsi_nomarks.sfm  fonts.mk
keymap/: .cvsignore  COPYING  Makefile.am  arab.kmap  arabic.map  isiri2901.kmap  keymaps.mk
macOS/: test.txt
sbin/: farsigetty
testtext/: Makefile.am  hafez  kan_zipor  marks
testtexts/: Makefile.am
