##############################################################################
## $Id: Makefile.am,v 1.3 2004/04/13 08:42:09 behdad Exp $
## $Author: behdad $
## $Date: 2004/04/13 08:42:09 $
## $Revision: 1.3 $
## $Source: /home/arabeyes/cvs/projects/bicon/doc/Makefile.am,v $
##############################################################################
##                                               -*- Automake -*-
## Process this file with automake to produce Makefile.in

SUBDIRS = man
