##############################################################################
## $Id$
## $Date$
## $Revision$
## $Source$
##############################################################################
##                                               -*- Automake -*-
## Process this file with automake to produce Makefile.in

EXTRA_DIST = hafez fatiha marks
