##############################################################################
## $Id$
## $Date$
## $Revision$
## $Source$
##############################################################################
##                                               -*- Automake -*-
## Process this file with automake to produce Makefile.in

dist_man_MANS = bicon.bin.1 bicon.1
