##############################################################################
## $Id: Makefile.am,v 1.7 2004/04/13 08:42:09 behdad Exp $
## $Author: behdad $
## $Date: 2004/04/13 08:42:09 $
## $Revision: 1.7 $
## $Source: /home/arabeyes/cvs/projects/bicon/doc/man/Makefile.am,v $
##############################################################################
##                                               -*- Automake -*-
## Process this file with automake to produce Makefile.in

dist_man_MANS = bicon.bin.1 bicon.1
